; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcasper/services/cap_pwd/extr_cap_pwd.c_cap_getpwcommon.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcasper/services/cap_pwd/extr_cap_pwd.c_cap_getpwcommon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i32 }

@errno = common dso_local global i32 0, align 4
@gpwd = common dso_local global i32 0, align 4
@gbuffer = common dso_local global i32 0, align 4
@gbufsize = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.passwd* (i32*, i8*, i8*, i32)* @cap_getpwcommon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.passwd* @cap_getpwcommon(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.passwd*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.passwd*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* @errno, align 4
  store i32 %13, i32* %12, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* @gbuffer, align 4
  %19 = load i32, i32* @gbufsize, align 4
  %20 = call i32 @cap_getpwcommon_r(i32* %14, i8* %15, i8* %16, i32 %17, i32* @gpwd, i32 %18, i32 %19, %struct.passwd** %10)
  store i32 %20, i32* %11, align 4
  %21 = load i32, i32* %11, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %11, align 4
  store i32 %24, i32* @errno, align 4
  store %struct.passwd* null, %struct.passwd** %5, align 8
  br label %28

25:                                               ; preds = %4
  %26 = load i32, i32* %12, align 4
  store i32 %26, i32* @errno, align 4
  %27 = load %struct.passwd*, %struct.passwd** %10, align 8
  store %struct.passwd* %27, %struct.passwd** %5, align 8
  br label %28

28:                                               ; preds = %25, %23
  %29 = load %struct.passwd*, %struct.passwd** %5, align 8
  ret %struct.passwd* %29
}

declare dso_local i32 @cap_getpwcommon_r(i32*, i8*, i8*, i32, i32*, i32, i32, %struct.passwd**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
